fix atom value and address error not showing

--- a/app/style/Input.less
+++ b/app/style/Input.less
@@ -15,7 +15,7 @@
 .input-and-unit.error {
   border-bottom: 1px var(--error-text-color) solid;
   background-size: 16px 16px;
-  background-position: 100% 3px;
+  background-position: 100% 50%;
   background-repeat: no-repeat;
   background-image: @warning-input;
 }
